refact: add header & format in test & service & grpc & dist modules
Change-Id: Id2fa1374d7fa85635906a7e75655e7dad56f1807