@@ -1,28 +1,51 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements. See the NOTICE file distributed with this
+ * work for additional information regarding copyright ownership. The ASF
+ * licenses this file to You under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+ * License for the specific language governing permissions and limitations
+ * under the License.
+ */
+
 package org.apache.hugegraph.pd.rest;
 
-import com.baidu.hugegraph.pd.common.PDException;
-import com.baidu.hugegraph.pd.grpc.Metapb;
-import com.baidu.hugegraph.pd.grpc.Pdpb;
+import java.io.UnsupportedEncodingException;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+
+import javax.servlet.http.HttpServletRequest;
 
 import org.apache.hugegraph.pd.model.GraphRestRequest;
 import org.apache.hugegraph.pd.model.RestApiResponse;
 import org.apache.hugegraph.pd.service.PDRestService;
 import org.apache.hugegraph.pd.service.PDService;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.MediaType;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseBody;
+import org.springframework.web.bind.annotation.RestController;
+
+import com.baidu.hugegraph.pd.common.PDException;
+import com.baidu.hugegraph.pd.grpc.Metapb;
+import com.baidu.hugegraph.pd.grpc.Pdpb;
 
 import lombok.Data;
 import lombok.extern.slf4j.Slf4j;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.MediaType;
-import org.springframework.web.bind.annotation.*;
-
-import javax.servlet.http.HttpServletRequest;
-import java.io.UnsupportedEncodingException;
-import java.net.URLDecoder;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
 
 @RestController
 @Slf4j
@@ -76,7 +99,8 @@ public class GraphAPI extends API {
         return response;
     }
 
-    @PostMapping(value = "/graph/**", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
+    @PostMapping(value = "/graph/**", consumes = MediaType.APPLICATION_JSON_VALUE,
+                 produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseBody
     public String setGraph(@RequestBody GraphRestRequest body, HttpServletRequest request) {
         try {
@@ -84,9 +108,10 @@ public class GraphAPI extends API {
             final String prefix = "/graph/";
             final int limit = 2;
             String graphName = requestURL.split(prefix, limit)[1];
-            graphName = URLDecoder.decode(graphName, "utf-8");
+            graphName = URLDecoder.decode(graphName, StandardCharsets.UTF_8);
             Metapb.Graph curGraph = pdRestService.getGraph(graphName);
-            Metapb.Graph.Builder builder = Metapb.Graph.newBuilder(curGraph == null ? Metapb.Graph.getDefaultInstance() : curGraph);
+            Metapb.Graph.Builder builder = Metapb.Graph.newBuilder(
+                    curGraph == null ? Metapb.Graph.getDefaultInstance() : curGraph);
             builder.setGraphName(graphName);
             if (body.getPartitionCount() > 0) {
                 builder.setPartitionCount(body.getPartitionCount());
@@ -104,14 +129,15 @@ public class GraphAPI extends API {
 
     @GetMapping(value = "/graph/**", produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseBody
-    public RestApiResponse getGraph(HttpServletRequest request) throws UnsupportedEncodingException {
+    public RestApiResponse getGraph(HttpServletRequest request) throws
+                                                                UnsupportedEncodingException {
         RestApiResponse response = new RestApiResponse();
         GraphStatistics statistics = null;
         String requestURL = request.getRequestURL().toString();
         final String prefix = "/graph/";
         final int limit = 2;
         String graphName = requestURL.split(prefix, limit)[1];
-        graphName = URLDecoder.decode(graphName, "utf-8");
+        graphName = URLDecoder.decode(graphName, StandardCharsets.UTF_8);
         try {
             Metapb.Graph graph = pdRestService.getGraph(graphName);
             if (graph != null) {
@@ -193,9 +219,10 @@ public class GraphAPI extends API {
                                 shardsList.add(new Shard(shard1, partitionId));
                             }
                         } else {
-                            log.error("GraphAPI.Partition(), get shard group: {} returns null", pt.getId());
+                            log.error("GraphAPI.Partition(), get shard group: {} returns null",
+                                      pt.getId());
                         }
-                    } catch (PDException e){
+                    } catch (PDException e) {
                         log.error("Partition init failed, error: {}", e.getMessage());
                     }
                     this.shards = shardsList;
@@ -233,10 +260,11 @@ public class GraphAPI extends API {
                 List<Metapb.GraphStats> graphStatsList = store.getStats().getGraphStatsList();
                 for (Metapb.GraphStats graphStats : graphStatsList) {
                     if ((graphName.equals(graphStats.getGraphName()))
-                            && (Metapb.ShardRole.Leader.equals(graphStats.getRole()))) {
+                        && (Metapb.ShardRole.Leader.equals(graphStats.getRole()))) {
                         keyCount += graphStats.getApproximateKeys();
                         dataSize += graphStats.getApproximateSize();
-                        partition2DataSize.put(graphStats.getPartitionId(), graphStats.getApproximateSize());
+                        partition2DataSize.put(graphStats.getPartitionId(),
+                                               graphStats.getApproximateSize());
                     }
                 }
             }
